@@ -17,20 +17,20 @@ The image can be pushed to and stored in a cloud registry. Depending on the regi
 ## Build the Docker image
 The GeoTAX Docker sample contains a [Dockerfile](Dockerfile) which will be used to build the docker image.
 
-1. If you haven't already, clone or download this repository to your computer. 
-2. Copy the GeoTAX SDK war file in `<sample-directory>/docker/geotax/gtx` directory.
-3. Copy the GeoTAX binaries (taxing-resources folder) in `<sample-directory>/docker/geotax/gtx` directory.
-4. Build & push the Docker image by running the following command from the `<sample-directory>/docker/geotax` directory, where: 
+1. If you haven't already, clone or download this repository to your computer.
+3. Extract GeoTAX distribution's zip and copy the GeoTAX war file from `geotax-dist-<version>/webapp/geotax-rest-war-<version>.war` to `<sample-directory>/docker/geotax/gtx` directory.
+4. Copy the `geotax-dist-<version>/taxing-resources` directory (GeoTAX binaries) in `<sample-directory>/docker/geotax/gtx` directory.
+5. Build & push the Docker image by running the following command from the `<sample-directory>/docker/geotax` directory, where: 
    - `-t [IMAGE]` - image name or ID, and optionally a tag in the ‘name:tag’ format
 	  
    ```
    docker build -t [IMAGE] .
    ```
-5. Verify the image built successfully and is stored in the local repository. Your image should be listed after running the following command:
+6. Verify the image built successfully and is stored in the local repository. Your image should be listed after running the following command:
    ```
    docker image ls
    ```
-6. Push the image to the remote repository:
+7. Push the image to the remote repository:
        
    #### Amazon ECR
    Use one of the following methods to push your image to your remote repository. We’ve provided some example steps but you can refer to the [Amazon documentation](https://docs.aws.amazon.com/AmazonECR/latest/userguide/docker-push-ecr-image.html) for additional support.
@@ -56,32 +56,21 @@ The GeoTAX Docker sample contains a [Dockerfile](Dockerfile) which will be used 
 
 ## Running the Docker image locally     
 ### Set up the data
-Place your data into the `/docker/geotax/spd_files` directory. Run the command mentioned below to extract the reference data on the given location `/gtx_data`, that the application will use at runtime.
+Place your data into the `/docker/geotax/gtx_data` directory, that the application will use at runtime.
 
-   - Windows
-   
-   ```
-    cmd /c "<sample-directory>/docker/geotax/gtx/cli/cli.cmd" extract --s spd_files --d gtx_data
-   ```
-
-   - Linux
-   
-   ```
-    sh "<sample-directory>/docker/geotax/gtx/cli/cli.sh" extract --s spd_files --d gtx_data
-   ```
 ### Start the container
 Use the docker run command below to start the image on a local Docker daemon.  
 
 This docker command consists of:
 * Setting the port forwarding for the GeoTAX Service.
-* Mounting a local directory containing the GeoTAX reference data to a location that the container will access (i.e. `/usr/local/gtx/data`).
+* Mounting a local directory containing the GeoTAX reference data to a location that the container will access (i.e. `/usr/local/gtx-data`).
 
 The memory requirement may need to be adjusted as datasets are added to the application. 
 
 ```
-docker run -p 8080:8080 -v <sample-directory>/docker/geotax/gtx_data:/usr/local/gtx/data  -e GTX_DATA=/usr/local/gtx/data -e CATALINA_OPTS='-Xmx10g -Xms10g -XX:MaxPermSize=1024m' [IMAGE ID]
+docker run -p 8080:8080 -v <sample-directory>/docker/geotax/gtx_data:/usr/local/gtx-data -e GTX_DATA=/usr/local/gtx-data [IMAGE ID]
 ```
 ### Access the application
- To access the web-based demo application, open the following URL in a browser: 
+ To access the web-based demo GeoTAX application, open the following URL in a browser: 
    http://localhost:8080/
 
